# lyfe

./: .gitignore  Dockerfile  app.py  app_sign_in.py  backend.py  fly.toml  my_test_app.py  pyproject.toml  requirements.txt  sample_test.json  test_api_backend.py  test_backend.py
calendars/: gcal_access.py  get_available_slots.py  notioncal_access.py  schedule_event.py
